--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "volta": {
+    "node": "20.13.1"
   }
 }
