--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,13 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "strict": true,
+    "allowJs": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    ".eslintrc.cjs",
+    "postcss.config.js",
+    "tailwind.config.js",
+    "vite.config.ts"
+  ]
 }
